# elephant-agent

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: 001_feature_request.yaml  002_bug_report.yaml  config.yml
.github/workflows/: agent-lint.yml  ci.yml  deploy-preview.yml  design-closure-certification.yml  release-certification.yml
apps/: cron_scheduler_command.py  daemon.py  daemon_command.py  daemon_http.py  daemon_tasks.py  episode_runtime.py  launcher.py  logging_setup.py  supervisor_command.py
apps/api/: __init__.py  api_runtime_http_dispatch_helpers.py  api_runtime_http_methods.py  api_runtime_impl.py  api_runtime_internal_sections.py  api_runtime_provider_methods.py  api_runtime_source_methods.py  api_runtime_support.py  api_runtime_surface_methods.py  capabilities.py  source_import.py
apps/cli/: cli_main_elephant_support.py  cli_main_impl.py  cli_main_setup.py  cli_main_support.py  runtime_cognition.py  runtime_cron_sub_agents.py  runtime_extensions_surface.py  runtime_impl.py  runtime_provider.py  runtime_records.py  runtime_snapshot.py  runtime_turns.py  shell_boot.py  shell_impl.py  shell_methods_commands.py  shell_methods_dispatch.py  shell_opening.py  typer_support.py
apps/dashboard/: vite.config.ts
apps/desktop/: AGENTS.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/gateway/: capabilities.py  cli_control.py  dingding_service.py  discord_service.py  feishu_impl.py  gateway_main_impl.py  (+9 more)
(+84 files in other folders)
