[package]
name = "elephant-desktop"
version = "0.1.0"
description = "Mac-first all-in-one Elephant Agent desktop app"
authors = ["Elephant Agent"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
strip = true
